tests/ui/compile-fail/pin_data/pin_data_but_drop.stderr
error[E0119]: conflicting implementations of trait `MustNotImplDrop` for type `Foo`
 --> tests/ui/compile-fail/pin_data/pin_data_but_drop.rs:3:1
  |
3 | #[pin_data]
  | ^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `Foo`
  |
  = note: this error originates in the macro `$crate::__pin_data` which comes from the expansion of the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
